@@ -1,7 +1,12 @@
 Changes from Version 0.14.8 to 0.14.9 [14-Jun-2011]
 
 * Increased default MAX_BB_EVAL from 500 to 10000 (makes a difference
-  for difficult problems) and INITIAL_MESH_SIZE from "r1.0e-02" to "r1.0e-01"
+  for difficult problems) and INITIAL_MESH_SIZE from "r1.0e-02" to
+  "r1.0e-01"
+
+* Now default number of restarts in crs is 5 (zero is not reliaable
+  and I want sensible defaults in this package - higher is better but
+  for many problems this ought to suffice)
 
 Changes from Version 0.14.7 to 0.14.8 [10-Jun-2011]
 
